# tcoin

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  config.status  configure  configure.ac  libtcoinconsensus.pc  libtcoinconsensus.pc.in  libtool
src/: #validation.cpp#  Makefile  Makefile.am  Makefile.bench.include  Makefile.in  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.cpp~  chainparams.h  chainparamsbase.cpp  chainparamsbase.cpp~  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compat.h  (+97 more)
src/.deps/: libtcoin_common_a-amount.Po  libtcoin_common_a-base58.Po  libtcoin_common_a-blake.Po  libtcoin_common_a-blake2s-ref.Po  libtcoin_common_a-bmw.Po  libtcoin_common_a-chainparams.Po  libtcoin_common_a-coins.Po  libtcoin_common_a-compressor.Po  libtcoin_common_a-core_read.Po  libtcoin_common_a-core_write.Po  libtcoin_common_a-cubehash.Po  libtcoin_common_a-echo.Po  libtcoin_common_a-fugue.Po  libtcoin_common_a-groestl.Po  libtcoin_common_a-hamsi.Po  libtcoin_common_a-hash.Po  libtcoin_common_a-haval.Po  libtcoin_common_a-jh.Po  libtcoin_common_a-keccak.Po  libtcoin_common_a-key.Po  libtcoin_common_a-keystore.Po  libtcoin_common_a-luffa.Po  libtcoin_common_a-netaddress.Po  libtcoin_common_a-netbase.Po  libtcoin_common_a-protocol.Po  libtcoin_common_a-scheduler.Po  libtcoin_common_a-sha2.Po  libtcoin_common_a-shabal.Po  libtcoin_common_a-shavite.Po  libtcoin_common_a-simd.Po  libtcoin_common_a-skein.Po  libtcoin_common_a-sph_sha2big.Po  libtcoin_common_a-warnings.Po  libtcoin_common_a-whirlpool.Po  libtcoin_consensus_a-arith_uint256.Po  libtcoin_consensus_a-hash.Po  libtcoin_consensus_a-pubkey.Po  libtcoin_consensus_a-uint256.Po  libtcoin_consensus_a-utilstrencodings.Po  libtcoin_server_a-addrdb.Po  (+41 more)
src/bench/: .gitignore  Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_tcoin.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  lockedpool.cpp  mempool_eviction.cpp  perf.cpp  perf.h  rollingbloom.cpp  verify_script.cpp
src/bench/.deps/: bench_bench_tcoin-Examples.Po  bench_bench_tcoin-base58.Po  bench_bench_tcoin-bench.Po  bench_bench_tcoin-bench_tcoin.Po  bench_bench_tcoin-ccoins_caching.Po  bench_bench_tcoin-checkblock.Po  bench_bench_tcoin-checkqueue.Po  bench_bench_tcoin-coin_selection.Po  bench_bench_tcoin-crypto_hash.Po  bench_bench_tcoin-lockedpool.Po  bench_bench_tcoin-mempool_eviction.Po  bench_bench_tcoin-perf.Po  bench_bench_tcoin-rollingbloom.Po  bench_bench_tcoin-verify_script.Po
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/compat/.deps/: libtcoin_util_a-glibc_sanity.Po  libtcoin_util_a-glibcxx_sanity.Po  libtcoin_util_a-strnlen.Po
src/config/: stamp-h1  tcoin-config.h  tcoin-config.h.in  tcoin-config.h.in~
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/consensus/.deps/: libtcoin_consensus_a-merkle.Po  (+1 more)
src/crypto/: aes.cpp  aes.h  common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  modaloverlay.cpp  modaloverlay.h  networkstyle.cpp  networkstyle.h  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  (+69 more)
src/rpc/: blockchain.cpp  client.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h  tcoinconsensus.cpp  tcoinconsensus.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/test/: DoS_tests.cpp  Makefile  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bctest.py  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  raii_event_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  (+23 more)
src/wallet/: coincontrol.h  crypter.cpp  crypter.h  db.cpp  db.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+722 files in other folders)
